Add images to the articles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Times</title>
-    <link href="resources/style.css" type="text/css" rel="stylesheet"
+    <link href="resources/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
 
@@ -26,10 +26,10 @@
 
       <div class="column large">
 
-        <span class="article">
-          <p>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</p>
-        </span>
-        <span class="article">
+        <div class="article main-story">
+          <p class ="article-maintitle">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</p>
+        </div>
+        <div class="article">
           <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus,
           ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla
@@ -40,30 +40,30 @@
           lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper
           massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis
           neque. Nullam sit amet fringilla massa. </p>
-        </span>
-        <span class="article">
+        </div>
+        <div class="article">
           <h1>Orca Spends Vacation at Land World Puget</h1>
           <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed
           congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
-        </span>
-        <span class="article">
-          <p>Earth Spins Backwards for 2017</p>
-        </span>
-        <span class="article">
+        </div>
+        <div class="article earth">
+          <p class="article-title">Earth Spins Backwards for 2017</p>
+        </div>
+        <div class="article">
           <h1>Burger for Breakfast: How Early is too Early?</h1>
           <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus.
           Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl
           erat.</p>
-        </span>
-        <span class="article">
-          <p>Research Shows Cameras Erase Memory</p>
-        </span>
+        </div>
+        <div class="article cameras">
+          <p class="article-title">Research Shows Cameras Erase Memory</p>
+        </div>
 
       </div>
 
       <div class="column medium">
 
-        <span class="article">
+        <div class="article">
           <h1>FBI Finds Action Star Guilty of False Advertising</h1>
           <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae
           aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi
@@ -72,27 +72,27 @@
           pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut
           ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus.
           Vestibulum blandit aliquam felis... </p>
-        </span>
-        <span class="article">
-          <p>Cats in Control-Is It a Thing?</p>
-        </span>
-        <span class="article">
+        </div>
+        <div class="article cats">
+          <p class="article-title">Cats in Control-Is It a Thing?</p>
+        </div>
+        <div class="article">
           <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta
           aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque.
           Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien,
           a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo
           tellus pellentesque in. </p>
-        </span>
+        </div>
       </div>
 
       <div class="column small">
 
         <img src="https://raw.githubusercontent.com/AJ-2018/MyTimes/master/resources/images/cookie.png" alt="cookie">
-        <span class="article">
+        <div class="article">
           <h1>NEWS BITES</h1>
           <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising
           Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can </p>
-        </span>
+        </div>
 
       </div>
     </section>
