--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
+
     <title>My Times</title>
     <link href="resources/style.css" type="text/css" rel="stylesheet">
   </head>
@@ -18,7 +19,7 @@
       <h1 class="navigation"> <a href="#">World</a> </h1>
       <h1 class="navigation"> <a href="#">U.S.</a> </h1>
       <h1 class="navigation"> <a href="#">Tech</a> </h1>
-      <h1 class="navigation"> <a href="#">Science</a> </h1>
+      <h1 class="navigation last"> <a href="#">Science</a> </h1>
     </section>
 
     <!-- main content -->
@@ -29,6 +30,7 @@
         <div class="article main-story">
           <p class ="article-maintitle">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</p>
         </div>
+
         <div class="article">
           <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus,
@@ -41,25 +43,43 @@
           massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis
           neque. Nullam sit amet fringilla massa. </p>
         </div>
-        <div class="article">
-          <h1>Orca Spends Vacation at Land World Puget</h1>
-          <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed
-          congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
-        </div>
-        <div class="article earth">
-          <p class="article-title">Earth Spins Backwards for 2017</p>
-        </div>
-        <div class="article">
-          <h1>Burger for Breakfast: How Early is too Early?</h1>
-          <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus.
-          Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl
-          erat.</p>
-        </div>
-        <div class="article cameras">
-          <p class="article-title">Research Shows Cameras Erase Memory</p>
+
+        <div class="stories">
+          <div class="article">
+            <div class="story">
+              <div class="text-content">
+                <h1>Orca Spends Vacation at Land World Puget</h1>
+                <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed
+                congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+              </div>
+            </div>
         </div>
 
-      </div>
+          <div class="article">
+            <div class="story">
+              <div class="text-content">
+                <h1>Burger for Breakfast: How Early is too Early?</h1>
+                <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl
+                erat.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="article earth">
+            <div class="story">
+              <p class="article-title">Earth Spins Backwards for 2017</p>
+            </div>
+          </div>
+
+          <div class="article cameras">
+            <div class="story">
+              <p class="article-title">Research Shows Cameras Erase Memory</p>
+            </div>
+          </div>
+
+       </div>
+     </div>
 
       <div class="column medium">
 
@@ -89,9 +109,13 @@
 
         <img src="https://raw.githubusercontent.com/AJ-2018/MyTimes/master/resources/images/cookie.png" alt="cookie">
         <div class="article">
-          <h1>NEWS BITES</h1>
-          <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising
-          Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can </p>
+          <h1 class="bites">NEWS BITES</h1>
+          <p class="nb">Cat Emoji Goes Viral</p>
+          <p class="nb">Buy Youtube Views</p>
+          <p class="nb">Home Business Advertising Ideas</p>
+          <p class="nb">Advertising Internet Online</p>
+          <p class="nb">Illustration in Marketing Materials</p>
+          <p class="nb">Finally a Top Secret Way You Can</p>
         </div>
 
       </div>
