Final commit - Add footer and aligned the content

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-
     <title>My Times</title>
     <link href="resources/style.css" type="text/css" rel="stylesheet">
   </head>
@@ -11,15 +10,15 @@
     <!-- header section -->
     <section class="title">
 
-      <div class="header">
+      <div class="heading">
         <img src="https://raw.githubusercontent.com/AJ-2018/MyTimes/master/resources/images/logo.jpg" alt="logo">
         <h1 class="company">My Times</h1>
       </div>
-
       <h1 class="navigation"> <a href="#">World</a> </h1>
       <h1 class="navigation"> <a href="#">U.S.</a> </h1>
       <h1 class="navigation"> <a href="#">Tech</a> </h1>
       <h1 class="navigation last"> <a href="#">Science</a> </h1>
+
     </section>
 
     <!-- main content -->
@@ -32,16 +31,9 @@
         </div>
 
         <div class="article">
-          <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus,
-          ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla
-          sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat,
-          metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est
-          ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan.
-          Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet
-          lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper
-          massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis
-          neque. Nullam sit amet fringilla massa. </p>
+          <p>
+            MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.
+          </p>
         </div>
 
         <div class="stories">
@@ -49,8 +41,9 @@
             <div class="story">
               <div class="text-content">
                 <h1>Orca Spends Vacation at Land World Puget</h1>
-                <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed
-                congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+                <p>
+                  PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
+                </p>
               </div>
             </div>
         </div>
@@ -59,9 +52,9 @@
             <div class="story">
               <div class="text-content">
                 <h1>Burger for Breakfast: How Early is too Early?</h1>
-                <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl
-                erat.</p>
+                <p>
+                  Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.
+                </p>
               </div>
             </div>
           </div>
@@ -77,32 +70,27 @@
               <p class="article-title">Research Shows Cameras Erase Memory</p>
             </div>
           </div>
-
        </div>
+
      </div>
 
       <div class="column medium">
 
         <div class="article">
           <h1>FBI Finds Action Star Guilty of False Advertising</h1>
-          <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae
-          aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi
-          venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi
-          pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat
-          pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut
-          ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus.
-          Vestibulum blandit aliquam felis... </p>
+          <p>
+            WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...
+          </p>
         </div>
         <div class="article cats">
           <p class="article-title">Cats in Control-Is It a Thing?</p>
         </div>
         <div class="article">
-          <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta
-          aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque.
-          Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien,
-          a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo
-          tellus pellentesque in. </p>
+          <p>
+            BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.
+          </p>
         </div>
+        
       </div>
 
       <div class="column small">
@@ -120,6 +108,20 @@
 
       </div>
     </section>
+
+    <!-- footer section -->
+    <footer>
+      <div class="footer-maincontent">
+        <div class="footer-content1">
+          <h2 class="footer-com"><pre>MY Times   |  </pre></h2>
+          <p class="footer-nav"><a href="#">World</a></p>
+          <p class="footer-nav"><a href="#">U.S.</a></p>
+          <p class="footer-nav"><a href="#">Tech</a></p>
+          <p class="footer-nav"><a href="#">Science</a></p>
+        </div>
+        <p class="footer-content2">&copy 2016, My Times (A Division of Codecademy bite)</p>
+      </div>
+    </footer>
 
   </body>
 </html>
